# Quant-Finance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analysis/: Nifty50.ipynb  VehicleComparison.ipynb  mutual_funds.ipynb  nifty50.ipynb  nifty_etf_vs_mf.ipynb  scratchpad.py  sector.ipynb
data/: isin_scid_map.pkl  mf_metadata.pkl  mf_metadata.xlsx  mf_nav.pkl
data/BSE/: BSE_index_levels.pkl  FMCG.csv  IT.csv  all_cap.csv  auto.csv  commodities.csv  consumer_discretionary.csv  consumer_durables.csv  energy.csv  enhanced_value.csv  financial_services.csv  healthcare.csv  industrials.csv  low_vol.csv  metal.csv  momentum.csv  oil_gas.csv  power.csv  psu.csv  quality.csv  realty.csv  sensex.csv  telecom.csv  utilities.csv
data/NIFTY/: NIFTY 1D RATE INDEX_Data.csv  NIFTY 500_Data.csv  NIFTY 50_Data.csv  NIFTY MIDCAP150 MOMENTUM 50_Data.csv
data/RFR/: Overnight - MIBOR.xls
data_collector/: bse.ipynb  mf_metadata.ipynb
quant/: __init__.py  api.py  backtest.py  constants.py  data.py  plot.py  plots.py  plotting.py  portfolio.py  quant_accessor.py  utils.py
src/quant/: api.py  backtest.py  plot.py  portfolio.py  quant_accessor.py  utils.py
test_packages/: empyrial.ipynb
tests/: test_quant_accessor.py  test_utils.py
